@@ -6,6 +6,7 @@ import com.wittypuppy.backend.project.entity.Employee;
 import com.wittypuppy.backend.project.entity.Project;
 import com.wittypuppy.backend.project.entity.ProjectMember;
 import com.wittypuppy.backend.project.exception.CreateProjectException;
+import com.wittypuppy.backend.project.exception.ModifyProjectException;
 import com.wittypuppy.backend.project.exception.ProjectLockedException;
 import com.wittypuppy.backend.project.repository.EmployeeRepository;
 import com.wittypuppy.backend.project.repository.ProjectRepository;
@@ -30,7 +31,7 @@ public class ProjectService {
     public List<ProjectDTO> selectProjectListByTypeAndSearchValue(String type, String searchValue, Long employeeCode) {
         log.info("[ProjectService] >>> selectProjectListByTypeAndSearchValue >>> start");
         List<Project> projectList = null;
-        if (searchValue == null || searchValue.equals("")) {
+        if (searchValue == null || searchValue.isBlank()) {
             if (type == null) {
                 projectList = projectRepository.findAll();
             } else if (type.equals("me")) {
@@ -65,7 +66,7 @@ public class ProjectService {
     public String createProject(ProjectDTO projectDTO, Long employeeCode) {
         log.info("[ProjectService] >>> selectProjectListByTypeAndSearchValue >>> start");
 
-        int result = 0;
+        int result;
         try {
             Employee employee = employeeRepository.findById(employeeCode).orElseThrow(() -> new DataNotFoundException("해당하는 사원 정보가 없습니다."));
             Project newProject = modelMapper.map(projectDTO, Project.class);
@@ -93,14 +94,37 @@ public class ProjectService {
         List<ProjectMember> projectMemberList = project.getProjectMemberList();
 
         boolean isLocked = project.getProjectLockedStatus().equals("Y");
-        List<Long> employeeCodeList = projectMemberList.stream().map(projectMember -> projectMember.getEmployee().getEmployeeCode()).collect(Collectors.toList());
+        List<Long> employeeCodeList = projectMemberList.stream().map(projectMember -> projectMember.getEmployee().getEmployeeCode()).toList();
         boolean isMember = employeeCodeList.contains(employeeCode);
-        if(isLocked&&!isMember){
+        if (isLocked && !isMember) {
             throw new ProjectLockedException("허가되지 않은 사용자입니다.");
         }
-        ProjectDTO projectDTO = modelMapper.map(project,ProjectDTO.class);
+        ProjectDTO projectDTO = modelMapper.map(project, ProjectDTO.class);
 
         log.info("[ProjectService] >>> selectProjectByProjectCode >>> end");
         return projectDTO;
+    }
+
+    @Transactional
+    public String modifyProject(ProjectDTO projectDTO, Long projectCode, Long employeeCode) {
+        log.info("[ProjectService] >>> selectProjectByProjectCode >>> start");
+        int result;
+
+        try{
+            Project project = projectRepository.findById(projectCode).orElseThrow(()->new DataNotFoundException("해당 프로젝트를 찾을 수 없습니다."));
+            project.setProjectTitle(projectDTO.getProjectTitle());
+            project.setProjectDescription(projectDTO.getProjectDescription());
+            project.setProjectProgressStatus(projectDTO.getProjectProgressStatus());
+            project.setProjectDeadline(projectDTO.getProjectDeadline());
+            project.setProjectLockedStatus(projectDTO.getProjectLockedStatus());
+            result = 1;
+        }catch(Exception e){
+            throw new ModifyProjectException("프로젝트 수정에 실패했습니다.");
+        }
+
+
+        log.info("[ProjectService] >>> selectProjectByProjectCode >>> end");
+
+        return result > 0 ? "프로젝트 수정 성공" : "프로젝트 수정 실패";
     }
 }
